# gausify-server

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: release.yml
deploy/nginx/: gausify.conf
src/: config.rs  main.rs  net.rs  serve.rs  tls.rs
