[package]
name = "gausify-server"
version = "0.1.0"
edition = "2021"
description = "Single-binary local library server for Gausify — drop it in your splat folder and run."
license = "MIT"

[[bin]]
name = "gausify-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal", "net"] }
axum = "0.7"
# `ring` (not the default aws-lc-rs) keeps the build free of cmake/NASM, so the
# server cross-compiles to Windows/Linux cleanly. We install the provider
# ourselves (see main.rs), hence `tls-rustls-no-provider`.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
local-ip-address = "0.6"
percent-encoding = "2"
httpdate = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
